--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,13 @@ eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+spring.jpa.hibernate.ddl-auto=update
+spring.data.jpa.repositories.enabled=true
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/microservice
+spring.datasource.username=root
+spring.datasource.password=MyBaby12121994@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
